# coralpages-assets

./: .gitignore  Makefile  README.md  config.yaml  main.py  pyproject.toml  run.sh  serve.py
am/: config.py  setup.py
am/storage/: disk.py  factory.py  types.py
am/transforms/: factory.py  resize.py  types.py
amm/: app.py
amm/templates/: base.html  buckets.html  files-preview.html  files-upload.html  files.html  style.css
tests/: test_disk_storage.py
